--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>TX-6 Bluetooth Control</title>
     <meta property="og:title" content="TX-6 Remote">
     <meta property="og:description" content="Control TX-6 with Bluetooth or USB">
